--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
 - [ ] change ore icons fore core
 - [ ] get science pack icons for core
 - [x] copy paste generator script
+- [x] generate core
+- [ ] migrate equipment
+- [ ] make module graphics
+- [ ] figure out tech stuffs
+- [ ] make rocket fuel graphics
