everything hurts and i want to die

--- a/TODO
+++ b/TODO
@@ -6,4 +6,7 @@
 - [ ] make module graphics
 - [ ] figure out tech stuffs
 - [ ] make rocket fuel graphics
-- [ ] make science pack graphics
+- [x] make science pack graphics
+- [x] make ore graphics
+- [ ] make separate rocket fuel tech
+- [ ] make separate science tech
