--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-- [ ] change ore icons fore core
-- [ ] get science pack icons for core
+- [x] change ore icons for core
+- [x] get science pack icons for core
 - [x] copy paste generator script
 - [x] generate core
 - [ ] migrate equipment
@@ -10,3 +10,4 @@
 - [x] make ore graphics
 - [ ] make separate rocket fuel tech
 - [ ] make separate science tech
+- [ ] find different flying robot frame icon
