--- a/TODO
+++ b/TODO
@@ -5,9 +5,11 @@
 - [ ] migrate equipment
 - [ ] make module graphics
 - [ ] figure out tech stuffs
-- [ ] make rocket fuel graphics
+- [x] make rocket fuel graphics
 - [x] make science pack graphics
 - [x] make ore graphics
-- [ ] make separate rocket fuel tech
+- [x] make separate rocket fuel tech
 - [ ] make separate science tech
 - [ ] find different flying robot frame icon
+- [ ] make lds unlock with avant garde science
+- [ ] try to make the rocket fuel icon not look like butt
