--- a/TODO
+++ b/TODO
@@ -13,3 +13,4 @@
 - [ ] find different flying robot frame icon
 - [ ] make lds unlock with avant garde science
 - [ ] try to make the rocket fuel icon not look like butt
+- [x] add rocket fuel to Kovarex
