--- a/TODO
+++ b/TODO
@@ -14,3 +14,4 @@
 - [ ] make lds unlock with avant garde science
 - [ ] try to make the rocket fuel icon not look like butt
 - [x] add rocket fuel to Kovarex
+- [ ] do cfg file
