--- a/TODO
+++ b/TODO
@@ -15,3 +15,4 @@
 - [ ] try to make the rocket fuel icon not look like butt
 - [x] add rocket fuel to Kovarex
 - [ ] do cfg file
+- [ ] figure out if green science is correct
