--- a/TODO
+++ b/TODO
@@ -16,3 +16,6 @@
 - [x] add rocket fuel to Kovarex
 - [ ] do cfg file
 - [ ] figure out if green science is correct
+- [ ] make machine mk2 graphics
+- [ ] standardize logistic level colors
+- [ ] 
