--- a/TODO
+++ b/TODO
@@ -14,8 +14,8 @@
 - [ ] make lds unlock with avant garde science
 - [ ] try to make the rocket fuel icon not look like butt
 - [x] add rocket fuel to Kovarex
-- [ ] do cfg file
+- [x] do cfg file
 - [ ] figure out if green science is correct
 - [ ] make machine mk2 graphics
 - [ ] standardize logistic level colors
-- [ ] 
+- [ ] make all the things have standard prerequisites
