--- a/TODO
+++ b/TODO
@@ -23,4 +23,4 @@
 - [x] make utility lib
 - [x] migrate existing data to util lib
 - [ ] figure out the module ordering
-- [ ] do module cfg
+- [x] do module cfg
