--- a/TODO
+++ b/TODO
@@ -25,3 +25,5 @@
 - [ ] figure out the module ordering
 - [x] do module cfg
 - [ ] make equipment stuffs
+- [ ] make belt speeds be 15 -> 30 -> 45 -> 60 & match inserters to that
+- [ ] make really good night vision equipment
