--- a/TODO
+++ b/TODO
@@ -26,7 +26,7 @@
 - [x] do module cfg
 - [x] make equipment stuffs
 - [ ] make belt speeds be 15 -> 30 -> 45 -> 60 & match inserters to that
-- [ ] make really good night vision equipment
-- [ ] make mk2 fusion reactors
-- [ ] make mk2 exoskeletons
+- [x] make really good night vision equipment
+- [x] make mk2 fusion reactors
+- [x] make mk2 exoskeletons
 - [ ] change battery equipment icons
