--- a/TODO
+++ b/TODO
@@ -29,4 +29,6 @@
 - [x] make really good night vision equipment
 - [x] make mk2 fusion reactors
 - [x] make mk2 exoskeletons
-- [ ] change battery equipment icons
+- [x] change battery equipment icons
+- [x] change nightvision equipment icon
+- [ ] do equipment cfg
