--- a/TODO
+++ b/TODO
@@ -31,4 +31,5 @@
 - [x] make mk2 exoskeletons
 - [x] change battery equipment icons
 - [x] change nightvision equipment icon
-- [ ] do equipment cfg
+- [x] do equipment cfg
+- [x] make map presets
