--- a/TODO
+++ b/TODO
@@ -33,7 +33,7 @@
 - [x] change nightvision equipment icon
 - [x] do equipment cfg
 - [x] make map presets
-- [ ] do settings cfg
+- [ ] do settings cfg for equipment
 - [x] make beacon mk2 graphics
 - [x] make oil refinery mk2 graphics
 - [x] make chem plant mk2 graphics
