--- a/TODO
+++ b/TODO
@@ -66,3 +66,4 @@
 
 - [ ] fix assembler description
 - [ ] fix logistic science prereqs
+- [ ] remove fast filter inserter from electronics and add it to logistics 2
