--- a/TODO
+++ b/TODO
@@ -67,3 +67,4 @@
 - [ ] fix assembler description
 - [ ] fix logistic science prereqs
 - [ ] remove fast filter inserter from electronics and add it to logistics 2
+- [ ] add advanced material processing and oil processing to have green sci prereq
